# dataplicity-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: BRANCH_PROTECTION_RULESETS.md  ruleset-main.json  ruleset-release.json
.github/workflows/: bootstrap-winget.yml  ci.yml  release.yml  secrets-scan.yml  update-homebrew-tap.yml  update-winget.yml
dataplicity_cli/: __main__.py  api.py  cli.py  config.py  m2m.py  remote_access.py
docs/: windows-release.md
tests/: test_api_client.py  test_api_client_full.py  test_auth_session_expiry.py  test_cli_core_helpers.py  test_cli_ux_snapshots.py  test_config.py  test_devices_cli_helpers.py  test_devices_connection_quality.py  test_devices_history_cli.py  test_entrypoint.py  test_feature_gated_commands.py  test_m2m.py  test_m2m_full.py  test_remote_access_helpers.py  test_remote_access_single_command.py  test_sso_auth_flow.py  test_windows_packaging.py  test_winget_manifest.py
