[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataplicity-cli"
version = "0.1.4"
description = "Dataplicity command line interface"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "Dataplicity" }
]
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.3",
  "requests>=2.31.0",
  "websockets>=12.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]

[project.scripts]
dataplicity = "dataplicity_cli.cli:app"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["dataplicity_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "dataplicity_cli/cli.py",
  "dataplicity_cli/remote_access.py",
]

[tool.coverage.report]
fail_under = 100
